add show detail, modify some bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ShowAddActivity"></activity>
+        <activity android:name=".activity.ShowDetailActivity"></activity>
     </application>
 
 </manifest>
