--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'//green dao plugin
+apply plugin: 'com.neenbedankt.android-apt' //android annotations apt plugin
+def AAVersion='4.1.0' //android annotations version number
 
 android {
     compileSdkVersion 24
@@ -17,6 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    greendao {
+        schemaVersion 1
+        daoPackage 'com.yuewawa.showhelper.dao.gen'//package for generated dao file
+        targetGenDir 'src/main/java'
+    }
 }
 
 dependencies {
@@ -25,4 +33,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.google.code.gson:gson:2.6.2'
+    //green dao jars
+    compile 'org.greenrobot:greendao:3.1.1'
+    compile 'org.greenrobot:greendao-generator:3.1.0'
+    //android annotations jars
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
 }
